<resources>
    <string name="app_name">PKIprojekat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Prijava</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="login_btn">Prijavi se</string>
    <string name="register_new">Nemate nalog? Registracija</string>
    <string name="registration">Registracija</string>
    <string name="password2">Potvrdi lozinku</string>
    <string name="name">Ime</string>
    <string name="surname">Prezime</string>
    <string name="address">Adresa</string>
    <string name="phone_hint">Telefon (06XXXXXXXX)</string>
    <string name="register">Registruj se</string>
    <string name="already_logged">Već imate nalog? Prijava</string>
    <string name="my_profile">Moj profil</string>
    <string name="save">Sačuvaj</string>
    <string name="myprofile">MOJ PROFIL</string>
    <string name="promotions">PROMOCIJE</string>
    <string name="events">PONUDE</string>
    <string name="cart">KORPA</string>
    <string name="contact">KONTAKT</string>
    <string name="logout">ODJAVA</string>
    <string name="moments">Trenuci za pamćenje</string>
    <string name="notifications">Notifications</string>
    <string name="contact_address">Adresa: Milutina Milankovica 23, Beograd</string>
    <string name="address_title">📍 ADRESA</string>
    <string name="contact_info">Kontakt informacije</string>
    <string name="phone">📞 TELEFON</string>
    <string name="phone_contact">Telefon: 011/2221234</string>
    <string name="mail">📧 EMAIL</string>
    <string name="contact_mail">Email: trenucizapamcenje@mail.com</string>
    <string name="working_time">🕐 RADNO VREME</string>
    <string name="time">Ponedeljak - Petak: 08:00 - 18:00\nSubota: 10:00 - 22:00\nNedelja: zatvoreno</string>
    <string name="message_contact">Kontaktirajte nas za sve informacije o organizaciji Vaših najlepših trenutaka!</string>
    <string name="event_descr">Opis dogadjaja</string>
    <string name="event_title">Prvi rođendan / do 150 gostiju</string>
    <string name="event_price">Cena: 30e hrana i piće + 10e dekoracija po stolici</string>
    <string name="event_decription">Opis: Proslavite najlepše trenutke vaših mališana sa nama. Sala je opremljena najsavremenijom igraonicom za najmlađe goste, a tu je i zabava za roditelje.</string>
    <string name="date_hint">Datum</string>
    <string name="guest_number">Broj gostiju</string>
    <string name="num120">120</string>
    <string name="add_to_cart">Dodaj u korpu</string>
    <string name="comments">Komentari</string>
    <string name="add_comment">Dodaj komentar</string>
    <string name="write_comment">Unesite komentar...</string>
    <string name="value">Ocena:</string>
    <string name="send">Pošalji</string>
    <string name="cart_view">PREGLED KORPE</string>
    <string name="empty_Cart">KORPA JE TRENUTNO PRAZNA!</string>
    <string name="success_last_buy">Uspešno ste poslali zahtev za poslednju rezervaciju, bićete obavešteni u najkraćem mogućem roku.</string>
    <string name="thanks">Hvala Vam što vaše najdraže trenutke provodite sa nama!</string>
    <string name="cart_view2">PREGLED KORPE</string>
    <string name="total_price">Ukupna cena: 4800€</string>
    <string name="discount_price">Cena sa popustom: 3480€</string>
    <string name="cart_value">Vrednost korpe: 3480€</string>
    <string name="reservation_done">Završi rezervaciju</string>
    <string name="bell">🔔</string>
    <string name="no_notifications">Nema obaveštenja</string>
    <string name="no_notif_text">Trenutno nemate nova obaveštenja.\nBićete obavešteni o svim važnim dešavanjima.</string>
    <string name="first_birthday_text">Prvi rodjendan / do 150 gostiju</string>
    <string name="guest_120">Broj gostiju: 120</string>
    <string name="date_23_7">Datum: 23.7.2025.</string>
    <string name="remove">Izbaci</string>
    <string name="username_text">Korisničko ime</string>
    <string name="rationg">★★★★★</string>
    <string name="timestamp">12.08.2025 14:30</string>
    <string name="comment_text">Ovo je sadržaj komentara koji opisuje iskustvo korisnika sa događajem.</string>
    <string name="first_birthday">Prvi rođendan</string>
    <string name="guest_numb">Do 50 gostiju</string>
    <string name="place">Sala \'Bajka\'</string>
    <string name="description">Organizacija prvog rođendana sa kompletnom dekoracijom i animatorom</string>
    <string name="date_event">Dostupno tokom cele godine</string>
    <string name="price_event">25.000 RSD</string>
    <string name="look_details">Pogledaj detalje →</string>
    <string name="notification_title">Naslov obaveštenja</string>
    <string name="notification_date">12.08.2025 14:30</string>
    <string name="notification_content">Sadržaj obaveštenja koji može biti duži tekst sa opisom važnih informacija.</string>
    <string name="discount_20">20% POPUSTA</string>
    <string name="first_birthday_title">Prvi rođendan</string>
    <string name="description_promotion">Uz rezervaciju do kraja jula, dobijate 20% popusta po stolici, kao i 50% popusta na dekoraciju</string>
    <string name="date_promotion">Važi do: 31.07.2024</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome">dobrodošli</string>
</resources>